# rsdebstrap

./: .editorconfig  .gitignore  .renovaterc.json  .reviewdog.yml  .rustfmt.toml  .yamlfmt.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Taskfile.yml  deny.toml
.aqua/: aqua.yaml
.aqua/pkgs/: actionlint.yaml  cargo-deny.yaml  cargo-llvm-cov.yaml  cargo-zigbuild.yaml  clippy-reviewdog-filter.yaml  coreutils.yaml  cosign.yaml  ec.yaml  fd.yaml  ghalint.yaml  jq.yaml  mold.yaml  pinact.yaml  reviewdog.yaml  ripgrep.yaml  rustup.yaml  sccache.yaml  shellcheck.yaml  shfmt.yaml  taplo.yaml  task.yaml  yamlfmt.yaml  zig.yaml  zizmor.yaml
.cargo/: config.toml
.claude/: settings.json
.claude/skills/task-runner-ci-standards/: SKILL.md
.claude/skills/task-runner-ci-standards/references/: standards.md  technology-map.md  templates.md  verification-checklist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autofix.yml  ci.yml  cron-audit.yml  wc-audit.yml  wc-autofix.yml  wc-build.yml  wc-coverage.yml  wc-doc.yml  wc-fetch.yml  wc-format.yml  wc-release.yml  wc-reviewdog.yml  wc-test.yml
docs/: ARCHITECTURE.md
examples/: debian_bookworm.yml  debian_trixie.yml  debian_trixie_debootstrap.yml  debian_trixie_mmdebstrap.yml  debian_trixie_with_custom_mounts.yml  debian_trixie_with_mitamae.yml  debian_trixie_with_mounts.yml  debian_trixie_with_provisioners.yml
schema/: rsdebstrap.schema.json
scripts/: actions-matrix.jq  bootstrap.bash  build-matrix.jq  reviewdog-shellcheck.jq
src/: builder.rs  cli.rs  command.rs  config.rs  de.rs  error.rs  executor.rs  lib.rs  main.rs  pipeline.rs  privilege.rs  runner.rs  schema.rs  serde_helpers.rs
src/backends/: args.rs  debootstrap.rs  mmdebstrap.rs  mod.rs
src/bootstrap/: args.rs  config.rs  debootstrap.rs  mmdebstrap.rs  mod.rs
src/bootstrappers/: args.rs
src/executor/: mod.rs  pipe.rs  real.rs
src/isolation/: bwrap.rs  chroot.rs  config.rs  direct.rs  mod.rs  mount.rs  nspawn.rs  resolv_conf.rs
src/phase/: assemble.rs  mod.rs
src/phase/assemble/: mod.rs  resolv_conf.rs
src/phase/prepare/: mod.rs  mount.rs  resolv_conf.rs
src/phase/provision/: mitamae.rs  mod.rs  shell.rs
src/provisioners/: mod.rs  shell.rs
src/runner/: mod.rs  shell.rs
src/task/: execution.rs  file_ops.rs  mitamae.rs  mod.rs  shell.rs  validation.rs
tasks/: aqua.task.yml  audit.task.yml  build.task.yml  coverage.task.yml  doc.task.yml  format.task.yml  release.task.yml  reviewdog.task.yml  schema.task.yml  setup.task.yml  test.task.yml  tool.task.yml
tests/: builder_test.rs  cli_test.rs  completions_test.rs  config_test.rs  executor_privilege_test.rs  executor_test.rs  isolation_test.rs  mitamae_task_test.rs  msrv_test.rs  orchestration_test.rs  pipeline_test.rs  privilege_test.rs  provisioners_test.rs  rootfs_output_test.rs  runner_test.rs  schema_proptest.rs  schema_test.rs  shell_task_test.rs  task_test.rs
tests/helpers/: mod.rs
