[package]
name = "rsdebstrap"
description = "A declarative CLI tool to build Debian-based rootfs images using mmdebstrap and YAML manifests"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/takumin/rsdebstrap"
repository = "https://github.com/takumin/rsdebstrap"
keywords = ["debian", "ubuntu", "debootstrap", "mmdebstrap", "rootfs"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.18"
regex = "1.12.2"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.65"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.20.0", features = ["v4"] }
which = "8.0.0"
url = "2.5.8"
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "=3.25.0"
