[package]
name = "rsdebstrap"
authors = ["Takumi Takahashi <takumiiinn@gmail.com>"]
description = "A declarative CLI tool to build Debian-based rootfs images using mmdebstrap and YAML manifests"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/takumin/rsdebstrap"
repository = "https://github.com/takumin/rsdebstrap"
keywords = ["debian", "ubuntu", "debootstrap", "mmdebstrap", "rootfs"]
categories = ["command-line-utilities"]

[features]
# JSON Schema generation: the `schema` subcommand, `profile_json_schema*()`, and every
# `JsonSchema` derive. Default-on so `cargo run -- schema` and the schema drift tests
# work out of the box; build with `--no-default-features` to compile it all out.
default = ["schema"]
schema = ["dep:schemars", "dep:serde_json"]

[dependencies]
anyhow = "1.0.98"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.65"
rustix = { version = "1.1.3", features = ["fs"] }
schemars = { version = "1.2", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.25.0"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4"] }
which = "8.0.0"
# The maintained continuation of serde_yaml (dtolnay/serde-yaml, archived —
# RUSTSEC-2024-0370), published as `yaml_serde` by The YAML Organization.
yaml_serde = "0.10.4"

[dev-dependencies]
jsonschema = "=0.48.5"
proptest = "=1.11.0"
